--- a/src/components/atoms/navigation-item/navigation-item.module.scss
+++ b/src/components/atoms/navigation-item/navigation-item.module.scss
@@ -2,31 +2,30 @@
     font-size: 18px;
     font-weight: 500;
     letter-spacing: 0.36px;
+    position: relative;
+    transition: 0.2s;
+
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: -8px;
+        left: -3px;
+        transform: translateX(0);
+        width: calc(100% + 6px);
+        height: 2px;
+        background-color: #ffce4e;
+        transform: scaleX(0);
+        transition: transform 0.3s ease-in-out;
+        transform-origin: bottom right;
+    }
 
     &:hover {
         color: #ffce4e;
-        position: relative;
+        transition: 0.2s;
 
         &::after {
-            content: "";
-            position: absolute;
-            bottom: -8px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 0;
-            height: 2px;
-            background-color: #ffce4e;
-            transition: width 0.3s ease;
-            animation: expandWidth 0.3s ease forwards;
+            transform: scaleX(1);
+            transform-origin: bottom left;
         }
-    }
-}
-
-@keyframes expandWidth {
-    0% {
-        width: 0;
-    }
-    100% {
-        width: calc(100% + 6px);
     }
 }
