--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -3,196 +3,20 @@
     margin: 0 auto;
     position: relative;
 
-    .hero-section {
-        padding: 254px 153px 10px 81px;
-        min-width: 100%;
-        height: 100%;
+    
+    .partners-section {
+        margin-top: 194px;
+        width: 100%;
         position: relative;
-        z-index: 0;
-        display: flex;
-        justify-content: space-between;
-        overflow-y: hidden;
 
-        .left-part {
-            .main-title {
-                font-size: 85px;
-                font-weight: 700;
-                line-height: 130px;
-                width: fit-content;
-                margin-bottom: 77px;
-
-                .main-title-gold {
-                    color: #ffce4e;
-                }
-            }
-            .buttons-block {
-                display: flex;
-                gap: 48px;
-                margin-bottom: 121px;
-
-                .hero-button {
-                    padding: 24px 76px;
-                    height: 84px;
-                    font-size: 28px;
-                    font-weight: 600;
-                    line-height: 36px;
-                    cursor: pointer;
-                    text-transform: capitalize;
-
-                    &:hover {
-                        opacity: 0.7;
-                    }
-
-                    &:active {
-                        opacity: 0.5;
-                    }
-                }
-
-                .explore-button {
-                    color: #000;
-                    background: #ffce4e;
-                    border: none;
-                }
-
-                .create-button {
-                    color: #fff;
-                    border: 1px solid #ffce4e;
-                    background: rgba(233, 215, 167, 0.1);
-                }
-            }
-            .hero-section-counter {
-                list-style: none;
-                display: flex;
-                gap: 103px;
-
-                .hero-section-counter-item {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-
-                    & > h3 {
-                        font-size: 62px;
-                        font-weight: 700;
-                    }
-
-                    & > .counter-label {
-                        color: #9b9e9a;
-                        font-size: 24px;
-                        font-weight: 400;
-                        line-height: 35px;
-                    }
-                }
-            }
-        }
-        .right-blur {
-            position: absolute;
-            right: 0;
-            top: 0;
-            width: 770px;
-            height: 1063px;
-            background: rgba(79, 70, 78, 0.45);
-            backdrop-filter: blur(15px);
-            z-index: 0;
-        }
-
-        .right-part {
-            position: relative;
-            z-index: 2;
-            width: 556px;
-            height: 718px;
-
-            .card-body {
-                width: 100%;
-                height: 576px;
-                background-image: url("/hero-card.png");
-                background-position: top right;
-                background-repeat: no-repeat;
-                background-size: cover;
-                padding: 24px;
-                padding-bottom: 0;
-
-                .price-block {
-                    background: linear-gradient(
-                        145deg,
-                        rgba(255, 137, 61, 0.09) 0%,
-                        rgba(250, 250, 250, 0.6) 100%
-                    );
-                    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.12);
-                    backdrop-filter: blur(22.5px);
-                    list-style: none;
-                    padding: 16px 40px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-
-                    .price-block-item {
-                        display: flex;
-                        flex-direction: column;
-                        gap: 11px;
-
-                        & > span {
-                            font-size: 18px;
-                            font-weight: 500;
-                            letter-spacing: 1.44px;
-                            text-transform: capitalize;
-                        }
-
-                        & > h3 {
-                            color: #fff;
-                            font-size: 32px;
-                            font-weight: 700;
-                        }
-                    }
-                }
-            }
-            .card-footer {
-                height: 143px;
-                width: 100%;
-                background: #fff;
-                padding: 35px 40px 35px 60px;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-
-                .user-info {
-                    display: flex;
-                    align-items: center;
-                    flex-direction: column;
-
-                    & > h3 {
-                        color: #16091b;
-                        font-size: 28px;
-                        font-weight: 600;
-                        letter-spacing: 1.96px;
-                    }
-
-                    & > p {
-                        color: #594d5e;
-                        font-size: 24px;
-                        font-weight: 400;
-                        line-height: 35px;
-                    }
-                }
-
-                .start-bid-btn {
-                    padding: 23px 45px;
-                    background: #ffce4e;
-                    border: none;
-                    cursor: pointer;
-                    text-transform: capitalize;
-                    color: #000;
-                    font-size: 24px;
-                    font-weight: 700;
-
-                    &:hover {
-                        opacity: 0.7;
-                    }
-
-                    &:active {
-                        opacity: 0.5;
-                    }
-                }
-            }
+        .partners-list {
+            display: grid;
+            gap: 132px;
+            max-width: calc(100% - 340px);
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
         }
     }
 }
@@ -233,124 +57,6 @@
                 .hero-section-counter {
                     gap: 50px;
 
-                    .hero-section-counter-item {
-                        & > h3 {
-                            font-size: 40px;
-                            font-weight: 700;
-                        }
-
-                        & > .counter-label {
-                            font-size: 22px;
-                            line-height: 26px;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 1279px) {
-    .main {
-        .hero-section {
-            padding: 145px 16px 174px 16px;
-            flex-direction: column;
-            align-items: center;
-            overflow-y: visible;
-
-            .left-part {
-                padding-top: 0;
-
-                .main-title {
-                    text-align: center;
-                    font-size: 42px;
-                    line-height: 63px;
-                    margin-bottom: 56px;
-                }
-
-                .buttons-block {
-                    justify-content: center;
-                }
-
-                .hero-section-counter {
-                    position: absolute;
-                    gap: unset;
-                    top: 971px;
-                    justify-content: space-between;
-                    max-width: 320px;
-                    width: 100%;
-
-                    .hero-section-counter-item {
-                        & > h3 {
-                            font-size: 36px;
-                        }
-
-                        & > .counter-label {
-                            font-size: 16px;
-                        }
-                    }
-                }
-            }
-
-            .right-blur {
-                position: absolute;
-                top: 420px;
-                width: 100%;
-                height: 501px;
-                z-index: -1;
-            }
-
-            .right-part {
-                position: relative;
-                z-index: 2;
-                width: 280px;
-                height: 378px;
-
-                .card-body {
-                    width: 100%;
-                    height: 300px;
-                    padding: 30px 20px;
-                    padding-bottom: 0;
-
-                    .price-block {
-                        padding: 10px 21px;
-
-                        .price-block-item {
-                            gap: 3px;
-
-                            & > span {
-                                font-size: 16px;
-                                letter-spacing: 1.28px;
-                            }
-
-                            & > h3 {
-                                font-size: 22px;
-                            }
-                        }
-                    }
-                }
-                .card-footer {
-                    height: 82px;
-                    width: 100%;
-                    padding: 16px 27px 20px 40px;
-
-                    .user-info {
-                        & > h3 {
-                            font-size: 18px;
-                            letter-spacing: 1.26px;
-                        }
-
-                        & > p {
-                            font-size: 14px;
-                            line-height: 14px;
-                        }
-                    }
-
-                    .start-bid-btn {
-                        padding: 8px 24px;
-                        font-size: 16px;
-                        font-weight: 600;
-                    }
                 }
             }
         }
