feat: added color palette

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,8 +1,4 @@
-$base-color: #f5fbf2;
-$secondary-color: #ffce4e;
-$social-media: #d53d5c;
-$social-media-hovered: #f7d7ff;
-$body-color: #251928;
+@import "variables";
 
 html,
 body {
